--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "htmlparser2": "^3.9.1",
     "lexrank": "^1.0.4",
+    "node-wit": "^4.1.0",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.2",
     "txtwiki": "git+https://github.com/joaomsa/txtwiki.js.git"
