--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "htmlparser2": "^3.9.1",
     "lexrank": "^1.0.4",
+    "mongoose": "^4.5.10",
     "node-wit": "^4.1.0",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.2",
