--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "botkit": "git+https://github.com/howdyai/botkit.git",
+    "co": "^4.6.0",
     "express": "^4.14.0",
     "htmlparser2": "^3.9.1",
+    "knuth-shuffle": "^1.0.1",
     "later": "^1.2.0",
     "lexrank": "^1.0.4",
     "mongoose": "^4.5.10",
