--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "later": "^1.2.0",
     "lexrank": "^1.0.4",
     "mongoose": "^4.5.10",
+    "node-gd": "^1.4.0",
     "node-wit": "^4.1.0",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.2",
