--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.5.10",
     "node-gd": "^1.4.0",
     "node-wit": "^4.1.0",
+    "randomstring": "^1.1.5",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.2",
     "txtwiki": "git+https://github.com/joaomsa/txtwiki.js.git"
