--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "botkit": "git+https://github.com/howdyai/botkit.git",
     "co": "^4.6.0",
     "express": "^4.14.0",
+    "html-entities": "^1.2.0",
     "htmlparser2": "^3.9.1",
     "knuth-shuffle": "^1.0.1",
     "later": "^1.2.0",
